fix scrollbar width none

--- a/src/index.css
+++ b/src/index.css
@@ -188,3 +188,7 @@ html {
     margin-left: -32px;
   }
 }
+
+.no-scrollbar {
+  scrollbar-width: none;
+}
